--- a/src/App.css
+++ b/src/App.css
@@ -2309,3 +2309,622 @@ section {
 --------------------------------------------------------------*/
 
 /* About Us Page Css Ends */
+
+
+ /* added new style from searchbar from chemicals folder */
+.input_box{
+  /* margin-top: 5rem; */
+  height: 45vh;
+  background-color: #eff6f7;
+  /* box-shadow: ; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.input-container {
+  z-index: 1;
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 0% 0 5% 0%;
+  font-size: 16px;
+}
+@media only screen and (min-width:320px) and (max-width:768px){
+  .input-container {
+      padding: 0% 0% 0% 0%;
+    } 
+}
+.search_input {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  padding: 18px 16px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all .5s ease-in-out;
+}
+
+.search_input::placeholder {
+  color: transparent;
+}
+
+.search_input:focus::placeholder {
+  color: rgb(131, 128, 128);
+}
+
+.search_input:focus,.search_input:not(:placeholder-shown) {
+  background-color: #fff;
+  border: 2px solid #15227e;
+  width: 290px;
+  cursor: none;
+  padding: 18px 16px 18px 45px;
+}
+
+.search_icon {
+  position: absolute;
+  left: 0;
+  height: 45px;
+  width: 45px;
+  background-color: #fff;
+  border-radius: 99px;
+  z-index: -1;
+  fill: #15227e;
+  border: 1px solid #15227e;
+}
+
+.search_input:focus + .search_icon,.search_input:not(:placeholder-shown) + .search_icon {
+  z-index: 0;
+  background-color: transparent;
+  border: none;
+}
+
+
+/* added carousel or product css */
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+}
+
+:root {
+  --primary: #15227e;
+  --white: #ffffff;
+  --bg: #f5f5f5;
+}
+
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+@media (min-width: 1440px) {
+  html {
+    zoom: 1;
+  }
+}
+
+@media (min-width: 2560px) {
+  html {
+    zoom: 1.2;
+  }
+}
+
+@media (min-width: 3860px) {
+  html {
+    zoom: 1.5;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 1.3rem;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 1rem;
+  background: #797979;
+  transition: all 0.5s ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #222224;
+}
+
+::-webkit-scrollbar-track {
+  background: #f9f9f9;
+}
+
+body {
+  font-size: 3rem;
+  background: var(--bg);
+}
+
+.container_for_swiper {
+  max-width: 124rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 10rem;
+  padding-bottom: 6rem;
+  margin: 0 auto;
+}
+
+.heading {
+  padding: 1rem 0;
+  font-size: 3.5rem;
+  text-align: center;
+}
+
+.swiper_container {
+  transform: translate3d(0, 0, 0);
+  transition-timing-function: ease-in-out;
+  transition-duration: 0.5s;
+  height: 52rem;
+  padding: 1.8rem 0;
+  position: relative;
+}
+
+.swiper_container_slide {
+  width: 37rem !important;
+  height: 42rem !important;
+  position: relative !important;
+}
+
+@media (max-width: 500px) {
+  .swiper_container {
+    height: 47rem;
+
+  }
+
+  .swiper_container_slide {
+    width: 28rem !important;
+    height: 36rem !important;
+  }
+
+  .swiper_container_slide img {
+    width: 28rem !important;
+    height: 36rem !important;
+  }
+}
+
+.swiper_container_slide img {
+  width: 37rem;
+  height: 42rem;
+  border-radius: 2rem;
+  object-fit: cover;
+}
+
+.swiper-slide-shadow-left,
+.swiper-slide-shadow-right {
+  display: none;
+}
+
+.slider-controler {
+  position: relative;
+  bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.slider-controler .swiper-button-next {
+  left: 58% !important;
+  transform: translateX(-58%) !important;
+}
+
+@media (max-width: 990px) {
+  .slider-controler .swiper-button-next {
+    left: 70% !important;
+    transform: translateX(-70%) !important;
+  }
+}
+
+@media (max-width: 450px) {
+  .slider-controler .swiper-button-next {
+    left: 80% !important;
+    transform: translateX(-80%) !important;
+  }
+}
+
+@media (max-width: 990px) {
+  .slider-controler .swiper-button-prev {
+    left: 30% !important;
+    transform: translateX(-30%) !important;
+  }
+}
+
+@media (max-width: 450px) {
+  .slider-controler .swiper-button-prev {
+    left: 20% !important;
+    transform: translateX(-20%) !important;
+  }
+}
+
+.slider-controler .slider-arrow {
+  background: var(--white);
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  left: 42%;
+  transform: translateX(-42%);
+  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+}
+
+.slider-controler .slider-arrow .bi {
+  font-size: 2.8rem;
+  color: #222224;
+  position: absolute;
+}
+
+.bi-arrow-left-circle-fill {
+  animation: moveHorizontalLeft 0.9s ease-in-out infinite alternate;
+
+}
+
+.bi-arrow-right-circle-fill {
+  animation: moveHorizontalRight 0.9s ease-in-out infinite alternate;
+
+}
+
+@keyframes moveHorizontalLeft {
+  0% {
+    left: 0;
+  }
+
+  100% {
+    left: calc(50% - 20px);
+    /* Adjust this value for arrow width */
+  }
+}
+
+@keyframes moveHorizontalRight {
+  0% {
+    right: 0;
+  }
+
+  100% {
+    right: calc(50% - 20px);
+    /* Adjust this value for arrow width */
+  }
+}
+
+.slider-controler .slider-arrow::after {
+  content: '';
+}
+
+.swiper-pagination {
+  position: relative !important;
+  width: 15rem !important;
+  bottom: 0.5rem !important;
+}
+
+.swiper-pagination .swiper-pagination-bullet {
+  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+}
+
+.swiper-pagination .swiper-pagination-bullet-active {
+  background: #222224;
+}
+
+
+/* added agro or timeline css from agro folder  */
+#agro_commodities {
+  padding: 60px 0;
+}
+
+@media only screen and (min-width:320px) and (max-width:768px) {
+  .breadcrums_title {
+      font-size: 40px;
+      text-align: center;
+  }
+}
+
+/* new css*/
+.timeline {
+  position: relative;
+  margin: auto;
+}
+.product_card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 5rem;
+  position: relative;
+  animation: movedown 1s linear forwards;
+  opacity: 0;
+}
+.product_card:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.product_card:nth-child(2) {
+  animation-delay: 1s;
+}
+
+.product_card:nth-child(3) {
+  animation-delay: 2s;
+}
+
+.product_card:nth-child(4) {
+  animation-delay: 3s;
+}
+
+.product_card:nth-child(5) {
+  animation-delay: 4s;
+}
+
+.product_card:nth-child(6) {
+  animation-delay: 5s;
+  padding-bottom: 0rem;
+}
+
+@keyframes movedown {
+  0% {
+      opacity: 1;
+      transform: translateY(-30px);
+  }
+
+  100% {
+      opacity: 1;
+      transform: translateY(0px);
+  }
+}
+.text_box {
+  padding: 0px 20px;
+  background-color: #fff;
+  position: relative;
+  border-radius: 6px;
+  font-size: 18px;
+}
+.text_card {
+  font-size: 32px;
+  font-weight: 500;
+  color: #15227e;
+}
+.text_box h2 {
+  font-weight: 600;
+}
+.product_desc {
+  font-size: 18px;
+  text-align: justify;
+}
+.ul_list {
+  padding: 1px;
+}
+.ul_list li {
+  list-style: none;
+  font-size: 18px;
+  padding: 7px 0;
+}
+.ul_list li i {
+  color: #15227e;
+  font-size: 22px;
+}
+.right_container {
+  padding-left: 4.1rem !important;
+}
+.animated_icon_div {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  border: 1px solid black;
+  background: white;
+  border-radius: 50%;
+  right: -7.5%;
+  top: 40%;
+  z-index: 10;
+}
+@media only screen and (min-width:769px) and (max-width:1199px){
+  .animated_icon_div {
+      right: -10.5%; 
+  }
+}
+@media only screen and (min-width:1200px) and (max-width:1400px){
+  .animated_icon_div {
+      right: -9%; 
+  }
+}
+@media only screen and (min-width:1400px) and (max-width:3000px){
+  .animated_icon_div {
+      right: -7.5%; 
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .right_container {
+      padding-left: 4.2rem !important;
+  }
+}
+.container_part{
+  position: relative;
+  z-index: -1;
+}
+.container_part .animated_icon {
+  position: relative;
+  width: 50px;
+  right: -15px;
+  top: 15px;
+  z-index: 10;
+}
+
+@media only screen and (min-width:320px) and (max-width:768px) {
+  .animated_icon_div {
+      position: absolute;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      background: white;
+      left: -7px;
+      top: 13%;
+      z-index: 10;
+  }
+  
+  .animated_icon_div:nth-child(2) {
+     top: 125%;
+  } 
+  
+  .animated_icon_div:nth-child(4) {
+     top: 125%;
+  }
+  
+  .animated_icon_div:nth-child(6) {
+     top: 125%;
+  }
+  .timeline::after {
+      animation: moveline 25s linear forwards !important;
+  }
+  .container_part .animated_icon {
+      position: relative;
+      width: 42px;
+      left: 7px;
+      top: 7px;
+      z-index: 10;
+  }
+  .product_container{
+      /* display: flex; */
+      justify-content: end;
+  }
+  .left_container{
+      padding-left: 3.5rem !important;
+  }
+  .timeline {
+      margin: 50px auto;
+  }
+
+  .timeline::after {
+      left: 31px !important;
+  }
+
+  .container_part {
+      width: 100%;
+      padding-left: 80px;
+      padding-right: 25px;
+  }
+  .product_desc {
+      font-size: 17px;
+  }
+  .text_box {
+      font-size: 16px;
+      padding-top: 2rem;
+  }
+
+  .text_box small {
+      margin-bottom: 10px;
+  }
+
+  .right_container {
+      left: 0;
+      z-index: -2;
+  }
+
+  .left_container img,
+  .right_container img {
+      left: 10px;
+  }
+}
+
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 10px;
+  height: 50%;
+  background: #15227e;
+  top: 0;
+  left: 50%;
+  margin-left: -3px;
+  z-index: -1;
+  animation: moveline 12s linear forwards;
+}
+
+@keyframes moveline {
+  0% {
+      height: 0;
+  }
+
+  100% {
+      height: 100%;
+  }
+}
+
+/* back to top css */
+
+/*--------------------------------------------------------------
+# Back to top button
+--------------------------------------------------------------*/
+.back-to-top {
+  position: fixed;
+  /* visibility: hidden; */
+  /* opacity: 0; */
+  right: 15px;
+  bottom: 15px;
+  z-index: 996;
+  background: #15227e;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+.back-to-top i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: #fff;
+  line-height: 0;
+  animation: gototop 1s linear infinite alternate-reverse;
+}
+
+.back-to-top:hover {
+  background: #5ca595;
+  color: #fff;
+}
+
+.back-to-top.active {
+  visibility: visible;
+  opacity: 1;
+}
+
+@keyframes gototop {
+  0%{
+      transform: translateY(-0.1rem);
+  }
+  100%{
+      transform: translateY(0.7rem);
+  }
+}
+/* whstasapp icons css */
+.whatsapp_float {
+  color: white !important;
+  position: fixed;
+  width: 55px;
+  height: 55px;
+  bottom: 20px;
+  left: 30px;
+  background-color: #0e9e15;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 35px;
+  z-index: 999;
+  animation: 2s infinite pulse-animation-whatsapp;
+}
+@media only screen and (max-width:600px){
+  .whatsapp_float{
+      bottom: 15px;
+      left: 15px;
+  }
+}
+@keyframes pulse-animation-whatsapp {
+  0% {
+      box-shadow: 0 0 0 0 #30be3a;
+  }
+
+  100% {
+      box-shadow: 0 0 0 14px transparent;
+  }
+}
